# surro-sel

./: README.md  app.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
components/: data_store.py  modals.py  notifications.py  sidebar.py
src/surro_sel/: app.py
src/surro_sel/calculation/: ionization_efficiency.py  surrogate_selection.py
src/surro_sel/components/: cards.py  modals.py  notifications.py  sidebar.py
src/surro_sel/dashboard/: app.py  cards.py  modals.py  sidebar.py
src/surro_sel/dashboard/cards/: _shared.py  hist.py  property.py  report.py  tsne.py
src/surro_sel/dashboard/modals/: load.py  upload.py
src/surro_sel/dashboard/utils/: files.py  notifications.py
src/surro_sel/modules/: cards.py  modals.py  sidebar.py
src/surro_sel/utils/: data_files.py  ionization_efficiency.py  surrogate_selection.py
utils/: data_files.py  surrogate_selection.py
workflows/: ci.yml
